--- a/css/index.css
+++ b/css/index.css
@@ -28,13 +28,13 @@
   .main-img-mobile img{
     display: block;
     width: 400px;
-    margin: 10px 110px 0 5px;
+    margin: 10px 0px 0px 5px;
   }
 }
 
 @media (max-width: 430px){
   .main-img-mobile img{
-    margin: 10px 0 0 10px;
+    margin: 10px 0 0 15px;
   }
 }
 
