--- a/css/login.css
+++ b/css/login.css
@@ -139,7 +139,7 @@
   font-family: 'Poppins', sans-serif;
   font-size: 1rem;
   background-color: var(--color-c4);
-  color: var(--color-white);
+  color: var(--color-c2);
   padding: 5px 0;
   border-radius: 5px;
   border: none;
