--- a/css/camiseta.css
+++ b/css/camiseta.css
@@ -56,7 +56,7 @@
 }
 
 .tamanho-produto{
-  background-color: var(--color-c2);
+  background-color: #fff;
   font-family: 'Roboto',sans-serif;
   font-size: 1rem;
   font-weight: 300;
@@ -65,6 +65,11 @@
   cursor: pointer;
   border: none;
   border-radius: 5px;
+}
+.tamanho-produto:hover{
+  background-color: var(--color-c1);
+  color: var(--color-c2);
+  transition: .3s;
 }
 
 .input-tamanho{
