--- a/css/header.css
+++ b/css/header.css
@@ -58,22 +58,20 @@
 /* Nav */
 .nav-list ul{
   display: flex;
-  gap: 30px;
+  gap: 20px;
   margin: 0 20px;
 }
 
 .list a{
-  color: var(--color-c2);
-}
-
-.list{
   font-family: 'Poppins', sans-serif;
+  color: var(--color-c2);
   border: 2px solid transparent;
   transition: .2s;
 }
 
-.list:hover{
+.list a:hover{
   background-color: var(--color-c3);
+  color: var(--color-c0);
   border-radius: 5px;
   transition: .2s;
 }
